fixed overlapping text

--- a/main.css
+++ b/main.css
@@ -18,6 +18,10 @@ h1, h2, h3, h4, h5, h6 {
     text-align: center;
 }
 
+h1 {
+    line-height: 1em;
+}
+
 .container {
     line-height: 0.5;
 }
